SERVER-7717 Removed ops section from serverStatus