src/mongo/s/commands_admin.cpp
@@ -30,7 +30,6 @@
 #include "mongo/s/client_info.h"
 #include "mongo/s/config.h"
 #include "mongo/s/grid.h"
-#include "mongo/s/stats.h"
 #include "mongo/s/strategy.h"
 #include "mongo/s/type_chunk.h"
 #include "mongo/s/type_database.h"
