src/mongo/s/request.cpp
@@ -28,7 +28,6 @@
 #include "request.h"
 #include "config.h"
 #include "chunk.h"
-#include "stats.h"
 #include "cursors.h"
 #include "grid.h"
 #include "client_info.h"
@@ -116,7 +115,6 @@ namespace mongo {
                << endl;
 
         Strategy * s = SHARDED;
-        _counter = &opsNonSharded;
 
         _d.markSet();
 
@@ -145,7 +143,6 @@ namespace mongo {
                << endl;
 
         globalOpCounters.gotOp( op , iscmd );
-        _counter->gotOp( op , iscmd );
     }
 
     bool Request::isCommand() const {
@@ -155,7 +152,6 @@ namespace mongo {
 
     void Request::gotInsert() {
         globalOpCounters.gotInsert();
-        _counter->gotInsert();
     }
 
     void Request::reply( Message & response , const string& fromServer ) {
